--- a/package.json
+++ b/package.json
@@ -23,39 +23,39 @@
     "postinstall": "HOME=$HOME/app-root/runtime node node_modules/bower/bin/bower install"
   },
   "dependencies": {
-    "ms": "*",
-    "assetmanager": "*",
-    "async": "*",
-    "body-parser": "*",
-	"multer": "*",
-    "compression": "*",
-    "connect-flash": "*",
-    "connect-mongo": "*",
-    "consolidate": "*",
-    "cookie-parser": "*",
-    "dependable": "*",
-    "errorhandler": "*",
-    "express": "*",
-    "express-session": "*",
-    "express-validator": "*",
-    "lodash": "*",
-    "meanio": "*",
-    "method-override": "*",
-    "mongoose": "*",
-    "morgan": "*",
-    "nodemailer": "*",
-    "passport": "*",
-    "passport-facebook": "*",
-    "passport-github": "*",
-    "passport-google-oauth": "*",
-    "passport-linkedin": "*",
-    "passport-local": "*",
-    "passport-twitter": "*",
-    "serve-favicon": "*",
-    "swig": "*",
-    "time-grunt": "*",
-    "view-helpers": "*",
-    "gridfs-stream":"*"
+    "ms": "^0.6.2",
+    "assetmanager": "^1.1.1",
+    "async": "~0.9.0",
+    "body-parser": "^1.2.0",
+	"multer": "^1.0.5",
+    "compression": "^1.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.4.1",
+    "consolidate": "^0.10.0",
+    "cookie-parser": "^1.1.0",
+    "dependable": "~0.2.5",
+    "errorhandler": "^1.0.0",
+    "express": "^4.2.0",
+    "express-session": "^1.1.0",
+    "express-validator": "^2.1.1",
+    "lodash": "^2.4.1",
+    "meanio": "~0.5.10",
+    "method-override": "^1.0.0",
+    "mongoose": "^3.8.8",
+    "morgan": "^1.0.0",
+    "nodemailer": "~0.7.0",
+    "passport": "^0.2.0",
+    "passport-facebook": "^1.0.3",
+    "passport-github": "^0.1.5",
+    "passport-google-oauth": "^0.1.5",
+    "passport-linkedin": "^0.1.3",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.2",
+    "serve-favicon": "^2.0.0",
+    "swig": "^1.3.2",
+    "time-grunt": "^0.3.1",
+    "view-helpers": "^0.1.4",
+	"gridfs-stream":"*"
   },
   "devDependencies": {
     "requirejs": "^2.1.11",
