--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "express-session": "^1.1.0",
     "express-validator": "^2.1.1",
     "lodash": "^2.4.1",
-    "meanio": "~0.5.10",
+    "meanio": "*",
     "method-override": "^1.0.0",
     "mongoose": "4.7.0",
     "morgan": "^1.0.0",
