--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mean",
   "description": "Material125",
-  "version": "0.4.0",
+  "version": "*",
   "private": false,
   "author": "Fahim Javed <fahim_javed@hotmail.com>",
   "contributors": [{
