--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 	"multer": "^1.0.5",
     "compression": "^1.0.1",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.4.1",
+    "connect-mongo": "*",
     "consolidate": "^0.10.0",
     "cookie-parser": "^1.1.0",
     "dependable": "~0.2.5",
@@ -41,6 +41,7 @@
     "lodash": "^2.4.1",
     "meanio": "~0.5.10",
     "method-override": "^1.0.0",
+    "mongoose": "4.2.7",
     "morgan": "^1.0.0",
     "nodemailer": "~0.7.0",
     "passport": "^0.2.0",
